--- a/Nav/style.css
+++ b/Nav/style.css
@@ -3,11 +3,19 @@ nav {
   display: flex;
   flex-direction: row;
   font-family: Arial, Helvetica, sans-serif;
+  align-items: center;
 }
 
 .title {
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.hamburger > img {
+  display: none;
+  width: 2rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 a,
@@ -44,7 +52,6 @@ ul {
 }
 
 .search-container {
-  margin-top: 20px;
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
   left: 30px;
@@ -69,4 +76,16 @@ ul {
   color: white;
   border-color: rgb(15, 211, 119);
   border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  a,
+  ul,
+  .search-container {
+    display: none;
+  }
+
+  .hamburger > img {
+    display: flex;
+  }
 }
